Use .isBlank() instead of .trim().isEmpty() to check for empty/whitespace only strings